[gd_scene load_steps=13 format=3 uid="uid://dxr7phpxd7qol"]

[ext_resource type="Texture2D" uid="uid://d3xvjfuuljgo0" path="res://Assets/Textures/Cards/Front.png" id="1_pedkj"]
[ext_resource type="Script" uid="uid://bqt8o8scntu57" path="res://Scenes/Card/card.gd" id="1_yw1pg"]
[ext_resource type="Texture2D" uid="uid://c3aili4lcy87a" path="res://Assets/Textures/Cards/Back.png" id="2_g0nif"]
[ext_resource type="Texture2D" uid="uid://left37rfalru" path="res://Assets/Textures/Cards/Suits/Hearts/Suit.png" id="3_r5dc4"]
[ext_resource type="Texture2D" uid="uid://c5gqmarx3mays" path="res://Assets/Textures/Cards/Suits/Hearts/Ranks/Jack.png" id="4_c0g18"]
[ext_resource type="FontFile" uid="uid://g6hwsrh5md1m" path="res://Assets/Fonts/OldNewspaperTypes-Regular.ttf" id="5_r5dc4"]

[sub_resource type="Theme" id="Theme_r5dc4"]
default_font = ExtResource("5_r5dc4")
default_font_size = 49

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5dc4"]
size = Vector2(313.3333, 466.66666)

[sub_resource type="Animation" id="Animation_r5dc4"]
resource_name = "Hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.3, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_rffhp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j6efv"]
resource_name = "Dragging"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.29, 0.29), Vector2(0.3, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6efv"]
_data = {
&"Dragging": SubResource("Animation_j6efv"),
&"Hover": SubResource("Animation_r5dc4"),
&"RESET": SubResource("Animation_rffhp")
}

[node name="Card" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_yw1pg")

[node name="Front" type="Node2D" parent="."]

[node name="Front" type="Sprite2D" parent="Front"]
scale = Vector2(0.24999999, 0.24999999)
texture = ExtResource("1_pedkj")

[node name="Images" type="Node2D" parent="Front"]
scale = Vector2(4.9999995, 4.9999995)

[node name="Suits" type="Node2D" parent="Front/Images"]

[node name="1" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(-18, -30)
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="2" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(0, -38)
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="3" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(18, -30)
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="4" type="Sprite2D" parent="Front/Images/Suits"]
position = Vector2(-18, 0)
rotation = -3.1415925
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="5" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(0, -13)
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="6" type="Sprite2D" parent="Front/Images/Suits"]
position = Vector2(18, 0)
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="7" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(-18, 30)
rotation = 3.1415927
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="8" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(0, 13)
rotation = 3.1415927
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="9" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(18, 30)
rotation = 3.1415927
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="10" type="Sprite2D" parent="Front/Images/Suits"]
visible = false
position = Vector2(0, 38)
rotation = -3.1415925
scale = Vector2(0.049206294, 0.04920631)
texture = ExtResource("3_r5dc4")

[node name="Rank" type="Sprite2D" parent="Front/Images"]
visible = false
position = Vector2(0.99999994, -0.99999994)
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_c0g18")

[node name="Ranks" type="Node2D" parent="Front"]
scale = Vector2(0.99999994, 0.99999994)

[node name="Control" type="Control" parent="Front/Ranks"]
custom_minimum_size = Vector2(11.235, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -280.0
offset_right = 188.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Rank_Top_Left" type="Label" parent="Front/Ranks/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.010638341
anchor_right = 0.11702123
offset_right = 33.0
offset_bottom = 141.0
theme = SubResource("Theme_r5dc4")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Rank_Bottom_Right" type="Label" parent="Front/Ranks/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0130118
anchor_top = 0.9785714
anchor_right = 1.1171958
anchor_bottom = 0.9785714
offset_right = 32.99997
offset_bottom = 141.0
rotation = 3.1415927
theme = SubResource("Theme_r5dc4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Suits" type="Node2D" parent="Front"]
position = Vector2(-152.74995, -189.10298)
scale = Vector2(0.14087297, 0.14087297)

[node name="Suit_Top_Left" type="Sprite2D" parent="Front/Suits"]
texture = ExtResource("3_r5dc4")

[node name="Suit_Bottom_Right" type="Sprite2D" parent="Front/Suits"]
position = Vector2(2184.5918, 2584.6191)
rotation = -3.1415927
texture = ExtResource("3_r5dc4")

[node name="Back" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.000036, 1.1265895)
scale = Vector2(0.60542077, 0.60542077)
texture = ExtResource("2_g0nif")

[node name="HoverArea" type="Area2D" parent="."]
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
position = Vector2(-1.0927517e-06, 7.947286e-06)
shape = SubResource("RectangleShape2D_r5dc4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j6efv")
}

[connection signal="mouse_entered" from="HoverArea" to="." method="_on_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_hover_area_mouse_exited"]
